--- a/assets/spoiler.css
+++ b/assets/spoiler.css
@@ -46,13 +46,13 @@
 }
 
 .spoiler.collapsed .spoiler-content {
-    overflow: hidden;
+    overflow: auto;
     max-height: 0;
 }
 
 .spoiler.expanded .spoiler-content {
     max-height: 3000px;
-    overflow: hidden;
+    overflow: auto;
 }
 
 .spoiler .spoiler-content p:first-child {
